<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sh.wm.ministry.featuers.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_user_file"
        android:name="com.sh.wm.ministry.featuers.userfile.UserFileFragment"
        android:label="@string/menu_user_file"
        tools:layout="@layout/fragment_major_services" />

    <fragment
        android:id="@+id/nav_major_services"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.majorservices.view.MajorServicesFragment"
        android:label="@string/major_services"
        tools:layout="@layout/fragment_major_services" />

    <fragment
        android:id="@+id/nav_address_contact"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.addressAndContact.view.AddressAndContactFragment"
        android:label="@string/address_contact"
        tools:layout="@layout/fragment_address_and_contact" />

    <fragment
        android:id="@+id/nav_healh"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.health.view.HealhFragment"
        android:label="@string/health_status"
        tools:layout="@layout/fragment_health_status" />

    <fragment
        android:id="@+id/nav_dependents"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.dependents.view.DependentsFragment"
        android:label="@string/dependents"
        tools:layout="@layout/fragment_dependents" />
    <fragment
        android:id="@+id/nav_add_dependents"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.dependents.view.AddDependentsFragment"
        android:label="@string/add_dependents"
        tools:layout="@layout/fragment_add_dependents" />
    <fragment
        android:id="@+id/nav_educational_status"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.educationalstatus.view.EducationalStatusFragment"
        android:label="@string/educational_status"
        tools:layout="@layout/fragment_educational_status" />

    <fragment
        android:id="@+id/nav_add_education"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.educationalstatus.view.AddEducationFragment"
        android:label="@string/add_eductionalstatus"
        tools:layout="@layout/fragment_add_education" />

    <fragment
        android:id="@+id/nav_training_programs"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.trainingprograms.view.TrainingProgramsFragment"
        android:label="@string/training_programs"
        tools:layout="@layout/fragment_training_programs" />

    <fragment
        android:id="@+id/nav_worker_complaint_form1"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.workercompilation.view.WorkerCompilationFormOneFragment"
        android:label="@string/worker_complaint"
        tools:layout="@layout/fragment_file_complaint_form1" />

    <fragment
        android:id="@+id/nav_worker_complaint_form2"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.workercompilation.view.WorkerCompilationFormTwoFragment"
        android:label="@string/worker_complaint"
        tools:layout="@layout/fragment_file_complaint_form2" />

    <!-- career -->
    <fragment
        android:id="@+id/nav_career"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.career.view.CareersFragment"
        android:label="@string/add_career"
        tools:layout="@layout/fragment_careers" />

    <!-- work experience -->
    <fragment
        android:id="@+id/nav_work_experience"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.workexperience.view.UserWorkExperiencesFragment"
        android:label="@string/practical_experiences" />

    <fragment
        android:id="@+id/nav_add_work_experience"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.workexperience.view.AddWorkExperienceFragment"
        android:label="@string/add_experience"
        tools:layout="@layout/fragment_add_work_experience" />

    <!-- languages -->
    <fragment
        android:id="@+id/nav_languages"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.languages.view.UserLanguagesFragment"
        android:label="@string/add_experience"
        tools:layout="@layout/fragment_user_languages" />

    <fragment
        android:id="@+id/nav_add_language"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.languages.view.AddLanguageFragment"
        android:label="@string/add_experience"
        tools:layout="@layout/fragment_add_language" />

    <!-- practical status-->
    <fragment
        android:id="@+id/nav_practical_status"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.practicalstatus.view.PracticalStatusFragment"
        android:label="fragment_practical_status"
        tools:layout="@layout/fragment_practical_status"/>

    <fragment
        android:id="@+id/nav_add_practical_status"
        android:name="com.sh.wm.ministry.featuers.userfile.userFiles.practicalstatus.view.AddPracticalStatusFragment"
        android:label="fragment_add_practical_status"
        tools:layout="@layout/fragment_add_practical_status" />

    <fragment
        android:id="@+id/nav_move_facility"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.movefacility.view.MoveTheFacilityFragment"
        android:label="@string/move_facility"
        tools:layout="@layout/fragment_move_the_facility" />

    <fragment
        android:id="@+id/nav_new_work_place"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.newWorkPlace.view.NewWorkplaceFragment"
        android:label="@string/report_at_new_work_place"
        tools:layout="@layout/fragment_new_workplace" />

    <fragment
        android:id="@+id/nav_leaving_work_place"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.LeavingWorkplace.view.LeavingAWorkplaceFragment"
        android:label="@string/report_left_work_place"
        tools:layout="@layout/fragment_leaving_a_workplace" />

    <fragment
        android:id="@+id/nav_alarm_form"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.alarmForm.view.AlarmFormFragment"
        android:label="@string/alarm_form"
        tools:layout="@layout/fragment_alarm_form" />


    <fragment
        android:id="@+id/nav_legal_action"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.legalAction.view.LegalActionFragment"
        android:label="@string/legal_action"
        tools:layout="@layout/fragment_legal_action" />

    <fragment
        android:id="@+id/nav_close_facility"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.closeFacility.view.CloseFacilityFragment"
        android:label="@string/close_facility"
        tools:layout="@layout/fragment_close_facility" />

    <fragment
        android:id="@+id/nav_adjustment_report"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.adjustmentReport.view.AdjustmentReportFragment"
        android:label="@string/adjustment_report"
        tools:layout="@layout/fragment_adjustment_report" />

    <!-- inspection -->
    <fragment
        android:id="@+id/nav_visit_sevices"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.visitServices.view.VisitingMenuFragment"
        android:label="@string/visits_services"
        tools:layout="@layout/fragment_inspection_visiting_menu"/>
    <fragment
        android:id="@+id/nav_inspection_results"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.visitServices.view.InspectionResultsFragment"
        android:label="@string/inspection_results"
        tools:layout="@layout/fragment_inspection_results" />
    <fragment
        android:id="@+id/nav_visit_out_of_plane"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.visitServices.view.InspVisitOutOfPlaneFragment"
        android:label="@string/visit_out_of_plane"
        tools:layout="@layout/fragment_insp_visit_out_of_plane" />
    <fragment
        android:id="@+id/nav_inspection_mng"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.visitServices.view.InspectionMngFragment"
        android:label="@string/inspection_mng_btn"
        tools:layout="@layout/fragment_inspection_mng" />
    <fragment
        android:id="@+id/nav_inspection_plane_management"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.visitServices.view.InspectionPlaneManagementFragment"
        android:label="@string/visit_out_of_plane"
        tools:layout="@layout/fragment_inspection_plane_managment" />
    <fragment
        android:id="@+id/nav_action_taking"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.visitServices.view.ActionTakingFragment"
        android:label="@string/take_action"
        tools:layout="@layout/fragment_action_taking" />
    <fragment
        android:id="@+id/nav_qayed_archive"
        android:name="com.sh.wm.ministry.featuers.home.homeFiles.QayedArchive.view.ArchiveFragment"
        android:label="@string/archive_title"
        tools:layout="@layout/fragment_archive" />


</navigation>