<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_user_file"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_user_file" />
        <item
            android:id="@+id/nav_qayed_archive"
            android:title="@string/archive_title" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/menu_signout" />

    </group>
</menu>