<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layoutDirection="rtl"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/txtStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/inspector_name" />

        <TextView
            android:id="@+id/ins_inspector_name"
            style="@style/editTxtStyle"
            android:layout_width="match_parent"
            android:drawableEnd="@drawable/ic_search_dark"
            />
        <TextView
            style="@style/txtStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/plane_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    style="@style/insResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/from" />
                <TextView
                    style="@style/datePickerStyle"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_calendar"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/stop_res_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                >
                <TextView
                    style="@style/insResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/to" />
                <TextView
                    style="@style/datePickerStyle"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_calendar"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            style="@style/txtStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/plane_status" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/insResult"
                android:text="@string/certified"
                android:textSize="15sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/insResult"
                android:text="@string/not_certified"
                android:textSize="15sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/insResult"
                android:text="@string/rejected"
                android:textSize="15sp"
                />
        </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>